# bricklib

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
codegen/: vecscatter
codegen/st/: expr.py  func.py  grid.py
codegen/st/codegen/: base.py  buffer.py  printer.py
codegen/st/codegen/backend/: asimd.py  avx2.py  avx512.py  base.py  cuda.py  flex.py  scalar.py  sse.py
gene/: CMakeLists.txt  README.md  brick-stencils.cu  brick-stencils.h  fft-gene-6d.cu  gene-6d-gtensor-stencils.h  gene-6d-main.cu  gene-6d-mpi.cpp  gene-6d-single.cpp  gene-6d-stencils.cu  gene-6d-stencils.h  gene-6d.cu  gene6d-gtensor-stencils.h  gtensor-stencils.h  ij_deriv_stencil.py  mpi-gene.cu  mpi-gene.cuh  mpi-gtensor.cu  mpi-gtensor.cuh  mpi-main.cpp  mpi-util.cpp  mpi-util.h  semi_arakawa_stencil.py  single-main.cpp  single-util.cpp  single-util.h  util.cpp  util.h
gene/docker/: Dockerfile  Makefile  README.md  perlmutter_setup.sh
gene/slurm/: .gitignore  Makefile  brick_shape_slurm_gen.py  build-perlmutter.sh  build-single.sh  fft_slurm_gen.py  get_ptx_info.py  mpi-gene-perlmutter.sh  mpi-gene.py  mpi_slurm_gen.py  single_vs_gtensor_slurm_gen.py  weak_scaling.sh
gene/slurm/slurmpy/: __init__.py  machineconfig.py  mailtypes.py  preamble.py
include/: Array.h  BrickLayout.h  BrickedArray.h  IndexSpace.h  InterleavedBrickedArrays.h  MPIHandle.h  MPILayout.h  ManagedBrickStorage.h  array-mpi.h  array.h  brick-cuda.h  brick-gpu.h  brick-mpi.h  brick.h  brickcompare.h  bricked-array.h  bricklayout.h  bricksetup.h  dev_shl.h  elementTypes.h  fft.h  mpi-cuda-util.h  multiarray.h  template-utils.h  vecscatter.h
single/: CMakeLists.txt  cpu.cpp  cuda.cpp  fft-gene-6d.cu  fft.cu  mpi.cpp  transpose-cu.h
single/gene-6d/: CMakeLists.txt  gene-6d.cpp  gene-6d.cu  gene-6d.h  main.cpp
slurm/weak-gene-6d-main/: cori-single-node.sh
src/: CMakeLists.txt  ManagedBrickStorage.cpp  array-mpi.cpp  memfd.cpp  multiarray.cpp
stencils/: 3axis.cpp  3axis.cu  7pt-complex.py  7pt_complex.py  gene-5d-main.cpp  gene-5d.cu  gene-5d.h  gene-6d-main.cpp  gene-6d.cpp  gene-6d.cu  gene-6d.h  stencils.h  stencils_cu.h
strong/: main.cpp  main.cu  mmap.cu
tests/: CMakeLists.txt  MPICartesianSetup_3D.h  MPIEnvironment.cpp  MPIEnvironment.h  array-test.cpp  bricked-array-test.cpp  copy-to-cuda-test.cu  cuda-test-utils.h  cuda-test.cu  index-space-test.cpp  mpi-cuda-test.cu  mpi-layout-test.cpp
weak/: CMakeLists.txt  gene-6d-main.cu  main-4d.cpp  main.cpp  main.cu  mmap.cu  onesided.cpp  shmem.cpp
